# blink-python

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
blink/: __init__.py  main.py
blink/core/: annotations.py  frame_data.py  judge.py  landmark_detector.py  state.py  window.py
blink/core/blink/: data.py
blink/detector/: __init__.py  landmark.py
blink/examples/: ear_plot.py  landmark_detector.py
blink/landmarker/: landmarker.py
blink/models/: blink.onnx
blink/predictor/: __init__.py
blink/stats/: __init__.py  eyeblink_entry.py
blink/trainer/: ear.py
blink/utils/: annotate_video_frame.py  blink_statistics.py  calc_ear.py  concat_samples.py  get_samples.py  plot.py
sample_data/: blink_01.txt  blink_01.txt.out  blink_02.txt  blink_02.txt.out  blink_03.txt  blink_03.txt.out  blink_04.txt  blink_04.txt.out  blink_08.txt  blink_08.txt.out  blink_09.txt  blink_09.txt.out  blink_10.txt  blink_10.txt.out  blink_11.txt  blink_11.txt.out  blink_26122013_223310_cam.ear  blink_26122013_224532_cam.ear  blink_26122013_230103_cam.ear  blink_26122013_230654_cam.ear  blink_27122013_151644_cam.ear  blink_27122013_152435_cam.ear  blink_27122013_153916_cam.ear  blink_27122013_154548_cam.ear  blink_dist.ear  non_blink_01.txt  non_blink_01.txt.out  non_blink_02.txt  non_blink_03.txt  non_blink_03.txt.out  non_blink_04.txt  non_blink_04.txt.out  non_blink_08.txt  non_blink_08.txt.out  non_blink_09.txt  non_blink_09.txt.out  non_blink_10.txt  non_blink_10.txt.out  non_blink_11.txt  non_blink_11.txt.out  (+3 more)
(+8 files in other folders)
