[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blink"
description = "BLINK"
authors = [{ name = "Tjaart van der Walt", email = "tjaart@tjaart.org" }]
dynamic = ["version"]
dependencies = [
	"lightning",
	"matplotlib",
	"mediapipe >=0.10.21",
	"onnx",
	"opencv-python",
	"scikit-learn",
	"tensorboard",
	"torch",
	"typer",
]

[tool.flit.sdist]
include = ["blink/models/**"]

[project.scripts]
blink = "blink:main"
# blink_calc_ear = "blink:calc_ear"
# blink_plot_ear = "blink.examples.landmark_detector:main"
# blink_stats = "blink.stats:main"
# blink_train_nn = "blink:train_nn"
# blink_train_svm = "blink:train_svm"
